--- a/Hotel App/Application/Landing/Amenities/AmenitiesViewController.xib
+++ b/Hotel App/Application/Landing/Amenities/AmenitiesViewController.xib
@@ -6,6 +6,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="AmenitiesViewController">
             <connections>
+                <outlet property="clockLabel" destination="RHB-G8-Dxs" id="vau-Wb-8en"/>
                 <outlet property="tempIcon" destination="yH7-77-ij5" id="Kwp-cN-GgI"/>
                 <outlet property="tempLabel" destination="SLd-LC-VaR" id="DAU-7K-hw5"/>
                 <outlet property="view" destination="2" id="3"/>
@@ -123,6 +124,13 @@ We look forward to providing a memorable stay for you and your pet. To ensure th
                     <rect key="frame" x="240" y="0.0" width="62" height="51"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 </imageView>
+                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="9:30" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RHB-G8-Dxs">
+                    <rect key="frame" x="142" y="9" width="85" height="31"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="30"/>
+                    <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    <nil key="highlightedColor"/>
+                </label>
             </subviews>
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
             <simulatedStatusBarMetrics key="simulatedStatusBarMetrics" statusBarStyle="lightContent"/>
