--- a/Hotel App/Application/Landing/LandingViewController.xib
+++ b/Hotel App/Application/Landing/LandingViewController.xib
@@ -73,10 +73,10 @@
                             <autoresizingMask key="autoresizingMask"/>
                         </imageView>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="YMg-5z-8Jk">
-                            <rect key="frame" x="125" y="50" width="99" height="35"/>
+                            <rect key="frame" x="104" y="43" width="143" height="50"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="19"/>
-                            <state key="normal" title="E STORE">
+                            <state key="normal" title="LOCAL ATTRACTIONS">
                                 <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                             </state>
